--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap"
@@ -28,15 +29,17 @@
     <!-- Logo & Contacts -->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo" href="./index.html"
+          >Web<span class="second-pt">Studio</span></a
+        >
         <ul class="nav-list">
-          <li><a class="link" href="#studio">Studio</a></li>
-          <li><a class="link" href="#portfolio">Portfolio</a></li>
-          <li><a class="link" href="#contacts">Contacts</a></li>
+          <li><a class="link" href="./index.html">Studio</a></li>
+          <li><a class="link" href="">Portfolio</a></li>
+          <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul class="address-list">
+      <address class="address-list">
+        <ul>
           <li>
             <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
