--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
     <!-- Order button -->
     <main>
       <section class="order-service">
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="title-hero">Effective Solutions for Your Business</h1>
         <button type="button" class="order">Order Service</button>
       </section>
       <!-- Сompany's advantages -->
-      <section id="pluses">
+      <section class="plus">
         <h2 class="visually-hidden">Our advantages</h2>
-        <ul>
+        <ul class="advan">
           <li>
             <h3>Strategy</h3>
             <p>
