--- a/index.html
+++ b/index.html
@@ -62,28 +62,28 @@
         <h2 class="visually-hidden">Our advantages</h2>
         <ul class="advan">
           <li>
-            <h3>Strategy</h3>
+            <h3 class="exp">Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="exp">Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="exp">Diligence</h3>
             <p>
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="exp">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -92,18 +92,18 @@
         </ul>
       </section>
       <!-- Team -->
-      <section id="team">
-        <h2>Our Team</h2>
-        <ul>
+      <section class="team">
+        <h2 class="our-team">Our Team</h2>
+        <ul class="compo">
           <li>
             <img src="images/mark.jpg" alt="mark" width="264" height="260" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="name">Mark Guerrero</h3>
+            <p class="descp">Product Designer</p>
           </li>
           <li>
             <img src="./images/tom.jpg" alt="tom" width="264" height="260" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="name">Tom Ford</h3>
+            <p class="descp">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -112,8 +112,8 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="name">Camila Garcia</h3>
+            <p class="descp">Marketing</p>
           </li>
           <li>
             <img
@@ -122,53 +122,53 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="name">Daniel Wilson</h3>
+            <p class="descp">UI Designer</p>
           </li>
         </ul>
       </section>
-      <section id="portfolio">
-        <h2>Our Portfolio</h2>
+      <section class="portfolio">
+        <h2 class="dignit">Our Portfolio</h2>
         <ul>
           <li>
             <img
-              src="/images/banking-app.jpg"
+              src="./images/banking-app.jpg"
               alt="banking-app"
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="allowa">Banking App</h3>
+            <p class="App">App</p>
           </li>
           <li>
             <img
-              src="/images/payment-app.jpg"
+              src="./images/payment-app.jpg"
               alt="payment"
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="allowa">Cashless Payment</h3>
+            <p class="App">Marketing</p>
           </li>
           <li>
             <img
-              src="/images/meditation-app.jpg"
+              src="./images/meditation-app.jpg"
               alt="meditation-app"
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="allowa">Meditation App</h3>
+            <p class="App">App</p>
           </li>
           <li>
             <img
-              src="/images/taxi-serv.jpg"
+              src="./images/taxi-serv.jpg"
               alt="taxi-service"
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="allowa">Taxi Service</h3>
+            <p class="App">Marketing</p>
           </li>
           <li>
             <img
@@ -177,8 +177,8 @@
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="allowa">Screen Illustrations</h3>
+            <p class="App">Design</p>
           </li>
           <li>
             <img
@@ -187,8 +187,8 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="allowa">Online Courses</h3>
+            <p class="App">Marketing</p>
           </li>
         </ul>
       </section>
