--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               height="300"
             />
             <h3 class="allowa">Banking App</h3>
-            <p class="App">App</p>
+            <p class="Apps">App</p>
           </li>
           <li>
             <img
@@ -148,7 +148,7 @@
               height="300"
             />
             <h3 class="allowa">Cashless Payment</h3>
-            <p class="App">Marketing</p>
+            <p class="Apps">Marketing</p>
           </li>
           <li>
             <img
@@ -158,7 +158,7 @@
               height="300"
             />
             <h3 class="allowa">Meditation App</h3>
-            <p class="App">App</p>
+            <p class="Apps">App</p>
           </li>
           <li>
             <img
@@ -168,35 +168,37 @@
               height="300"
             />
             <h3 class="allowa">Taxi Service</h3>
-            <p class="App">Marketing</p>
+            <p class="Apps">Marketing</p>
           </li>
           <li>
             <img
-              src="/images/illustrasion.jpg"
+              src="./images/illustrasion.jpg"
               alt="illustrasion"
               width="360"
               height="300"
             />
             <h3 class="allowa">Screen Illustrations</h3>
-            <p class="App">Design</p>
+            <p class="Apps">Design</p>
           </li>
           <li>
             <img
-              src="/images/courses.jpg"
+              src="./images/courses.jpg"
               alt="courses"
               width="360"
               height="300"
             />
             <h3 class="allowa">Online Courses</h3>
-            <p class="App">Marketing</p>
+            <p class="Apps">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Logo & Recommendation -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="foot">
+      <a class="logo-foot" href="./index.html"
+        >Web<span class="second-pt-foot">Studio</span></a
+      >
+      <p class="spec">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
