--- a/index.html
+++ b/index.html
@@ -63,28 +63,28 @@
         <ul class="advan">
           <li>
             <h3 class="exp">Strategy</h3>
-            <p>
+            <p class="goals">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
             <h3 class="exp">Punctuality</h3>
-            <p>
+            <p class="goals">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
             <h3 class="exp">Diligence</h3>
-            <p>
+            <p class="goals">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3 class="exp">Technologies</h3>
-            <p>
+            <p class="goals">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -94,7 +94,7 @@
       <!-- Team -->
       <section class="team">
         <h2 class="our-team">Our Team</h2>
-        <ul class="compo">
+        <ul class="company">
           <li>
             <img src="images/mark.jpg" alt="mark" width="264" height="260" />
             <h3 class="name">Mark Guerrero</h3>
@@ -138,7 +138,7 @@
               height="300"
             />
             <h3 class="allowa">Banking App</h3>
-            <p class="Apps">App</p>
+            <p class="apps">App</p>
           </li>
           <li>
             <img
@@ -148,7 +148,7 @@
               height="300"
             />
             <h3 class="allowa">Cashless Payment</h3>
-            <p class="Apps">Marketing</p>
+            <p class="apps">Marketing</p>
           </li>
           <li>
             <img
@@ -158,7 +158,7 @@
               height="300"
             />
             <h3 class="allowa">Meditation App</h3>
-            <p class="Apps">App</p>
+            <p class="apps">App</p>
           </li>
           <li>
             <img
@@ -168,7 +168,7 @@
               height="300"
             />
             <h3 class="allowa">Taxi Service</h3>
-            <p class="Apps">Marketing</p>
+            <p class="apps">Marketing</p>
           </li>
           <li>
             <img
@@ -178,7 +178,7 @@
               height="300"
             />
             <h3 class="allowa">Screen Illustrations</h3>
-            <p class="Apps">Design</p>
+            <p class="apps">Design</p>
           </li>
           <li>
             <img
@@ -188,7 +188,7 @@
               height="300"
             />
             <h3 class="allowa">Online Courses</h3>
-            <p class="Apps">Marketing</p>
+            <p class="apps">Marketing</p>
           </li>
         </ul>
       </section>
