--- a/index.html
+++ b/index.html
@@ -94,18 +94,18 @@
       <!-- Team -->
       <section class="team">
         <h2 class="our-team">Our Team</h2>
-        <ul class="company">
-          <li>
+        <ul>
+          <li class="company">
             <img src="images/mark.jpg" alt="mark" width="264" height="260" />
             <h3 class="name">Mark Guerrero</h3>
             <p class="descp">Product Designer</p>
           </li>
-          <li>
+          <li class="company">
             <img src="./images/tom.jpg" alt="tom" width="264" height="260" />
             <h3 class="name">Tom Ford</h3>
             <p class="descp">Frontend Developer</p>
           </li>
-          <li>
+          <li class="company">
             <img
               src="./images/camila.jpg"
               alt="camila"
@@ -115,7 +115,7 @@
             <h3 class="name">Camila Garcia</h3>
             <p class="descp">Marketing</p>
           </li>
-          <li>
+          <li class="company">
             <img
               src="./images/daniel.jpg"
               alt="daniel"
