--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     </header>
     <!-- Order button -->
     <main>
-      <section class="order-service">
+      <section class="buy-service">
         <h1 class="title-hero">Effective Solutions for Your Business</h1>
-        <button type="button" class="order">Order Service</button>
+        <button type="button" class="buy">Order Service</button>
       </section>
       <!-- Сompany's advantages -->
       <section class="plus">
